traffic-management-demo/egress-demo/egress-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: gatewaymarket-egress
  namespace: demo
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: google.com
